--- a/src/main/resources/view/exam_form.fxml
+++ b/src/main/resources/view/exam_form.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
-<?import javafx.scene.control.ListView?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -23,7 +26,7 @@
          </font>
       </Text>
       <Text layoutX="65.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Year :" AnchorPane.leftAnchor="30.0" />
-      <JFXComboBox fx:id="cmbYear" focusColor="BLACK" layoutX="38.0" layoutY="95.0" prefHeight="31.0" prefWidth="118.0">
+      <JFXComboBox fx:id="cmbYear" focusColor="BLACK" layoutX="28.0" layoutY="95.0" prefHeight="31.0" prefWidth="118.0">
          <unFocusColor>
             <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
                <stops>
@@ -33,7 +36,62 @@
             </RadialGradient>
          </unFocusColor>
       </JFXComboBox>
-      <ListView fx:id="listMonth" layoutX="38.0" layoutY="163.0" prefHeight="308.0" prefWidth="952.0" AnchorPane.bottomAnchor="197.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" />
-      <Text layoutX="30.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Month :" />
+      <Text layoutX="329.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Month :" />
+      <JFXComboBox fx:id="cmbMonth" focusColor="BLACK" layoutX="329.0" layoutY="95.0" prefHeight="31.0" prefWidth="148.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="#1b0c0c" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXComboBox>
+      <Text layoutX="654.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject :" />
+      <JFXComboBox fx:id="cmbSubject" focusColor="BLACK" layoutX="654.0" layoutY="95.0" onAction="#cmbSubjectOnnAction" prefHeight="31.0" prefWidth="148.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="#1b0c0c" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXComboBox>
+      <TableView fx:id="tblExam" layoutX="27.0" layoutY="242.0" prefHeight="427.0" prefWidth="948.0">
+        <columns>
+          <TableColumn fx:id="colStudentId" prefWidth="129.0" text="Student Id " />
+          <TableColumn fx:id="colStudentName" prefWidth="355.0" text="Student Name" />
+            <TableColumn fx:id="colMark" prefWidth="322.0" text="Marks" />
+            <TableColumn fx:id="colDelete" prefWidth="141.0" text="Delete" />
+        </columns>
+      </TableView>
+      <AnchorPane layoutX="29.0" layoutY="151.0" prefHeight="78.0" prefWidth="587.0" style="-fx-background-color: white;">
+         <children>
+            <Text layoutX="17.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Name :" />
+            <Text layoutX="225.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject Marks :" />
+            <JFXButton layoutX="426.0" layoutY="32.0" onAction="#btnAbsuntOnAction" style="-fx-background-color: yellow;" text="Absunt" />
+            <JFXTextField fx:id="txtStudentName" focusColor="BLACK" layoutX="17.0" layoutY="32.0">
+               <unFocusColor>
+                  <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                     <stops>
+                        <Stop color="BLACK" />
+                        <Stop color="WHITE" offset="1.0" />
+                     </stops>
+                  </RadialGradient>
+               </unFocusColor>
+            </JFXTextField>
+            <JFXTextField fx:id="txtSubjectMark" focusColor="BLACK" layoutX="225.0" layoutY="32.0">
+               <unFocusColor>
+                  <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                     <stops>
+                        <Stop color="BLACK" />
+                        <Stop color="WHITE" offset="1.0" />
+                     </stops>
+                  </RadialGradient>
+               </unFocusColor>
+            </JFXTextField>
+            <JFXButton layoutX="506.0" layoutY="32.0" onAction="#btnMarkOnAction" style="-fx-background-color: yellow;" text="Mark" />
+         </children></AnchorPane>
     </children>
 </AnchorPane>
